# vigilant-waffle

./: .pre-commit-config.yaml  README.md  run.sh  stop.sh
api/: Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
api/api/: router.py  settings.py  urls.py
api/api/users/: views.py
api/applications/: models.py  serializers.py  views.py
api/applications/migrations/: 0001_initial.py
api/applications/tests/: test_api.py
api/users/: serializers.py  views.py
ops/: .gitignore  docker-compose.yaml
