[tool.poetry]
name = "api"
version = "1.0.0a"
description = ""
authors = ["srusskih <smilemouse2002@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.9"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
